--- a/style.css
+++ b/style.css
@@ -5,16 +5,6 @@ body {
     padding: 0;
 }
 
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
-
 p {
     margin-bottom: 0;
 }
@@ -35,7 +25,11 @@ input[type=text] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.missing {
+    text-decoration: line-through;
+    color: red;
 }
