--- a/style.css
+++ b/style.css
@@ -1,34 +1,52 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f1f1f1;
-    margin: 0;
-    padding: 0;
+    background-color: #FEC919;
+    color: #003082;
+    padding: 12px 20px;
+    margin: 8px 0;
 }
 
 p {
     margin-bottom: 0;
 }
 
+h1 {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
+    background-color: #003082;
+    color: #FFFEF8;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid;
+    border-color: #FEC919;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+input[type=text]:focus {
+    border-color: #13313B;
 }
 
 .output {
     width: 100%;
     height: 200px;
-    padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .missing {
-    color: red;
+    color: #C9100A;
 }
